Change: header display values. Fix: scrollbars visibility in mobile-large and tablet versions

--- a/public/css/mobile-large.css
+++ b/public/css/mobile-large.css
@@ -4,6 +4,7 @@
     width: 90%;
     padding: 0;
     margin: 0 auto 6.3rem;
+    overflow-x: hidden;
 }
 
 .currecy__right-arrow {
