--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -26,10 +26,11 @@ header {
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 100%;
     min-width: 32rem;
     height: 33.4rem;
+    padding-bottom: 2.4rem;
     text-align: center;
     background: linear-gradient(207.8deg, #201E1C 16.69%, #F7931A 100%);
 }
@@ -37,7 +38,6 @@ header {
 header img {
     width: 15.1rem;
     height: 2.4rem;
-    margin-top: 8.1rem;
     align-self: center;
 }
 
@@ -45,8 +45,7 @@ header img {
     width: 90%;
     min-width: 28.8rem;
     max-width: 90rem;
-    height: 21.8rem;
-    margin-top: 3.6rem;
+    height: auto;
     align-self: center;
 }
 
