--- a/public/css/tablet.css
+++ b/public/css/tablet.css
@@ -1,3 +1,11 @@
+header {
+    height: 25rem;
+}
+
+.header__title-container .header__button {
+    top: calc(25rem - 4.8rem/2);
+}
+
 .main-plans__cards-container {
     display: flex;
     gap: 0rem;
@@ -8,6 +16,7 @@
     padding: 0;   
     align-items: center;
     justify-content: space-evenly;
+    overflow-x: hidden;
 }
 
 .main-plans__left-arrow, .main-plans__right-arrow {
